--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "rick-and-morty-graphql",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sklinkusch.github.io/rick-and-morty-graphql/",
   "dependencies": {
     "apollo-boost": "^0.4.2",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "graphql": "^14.3.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -18,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
